Disable overlay on mobile and fix frontend global styles

--- a/packages/frontend/src/ui/reset.css
+++ b/packages/frontend/src/ui/reset.css
@@ -136,3 +136,24 @@ button {
 input[type='checkbox'] {
   margin: 0;
 }
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
+.fade-enter,
+.fade-exit-to {
+  opacity: 0;
+}
+.fade-enter-active,
+.fade-exit-active {
+  transition: opacity 0.3s ease;
+}
