--- a/packages/overlay/src/styles.css
+++ b/packages/overlay/src/styles.css
@@ -1,6 +1,11 @@
 .overlay__container {
   --height: calc(var(--progress) * 100vh);
 }
+@media screen and (max-width: 640px) {
+  .overlay__container {
+    display: none;
+  }
+}
 .overlay__container[data-open='true'] {
   height: var(--height);
 }
